end of hack110 update

--- a/templates/my-list.html
+++ b/templates/my-list.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Stock Notebook</title>
         <link rel="stylesheet" href="/static/bootstrap.min.css">
         <link rel='stylesheet' href='/static/styles.css' />
+        <title>My List</title>
     </head>
     <body>
-        <!-- navigation bar -->
+                <!-- navigation bar -->
     <nav class="navbar navbar-expand">
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
@@ -23,13 +23,10 @@
             </ul>
         </div>
     </nav>
-        <p>Stock Market Notebook: Find up to date prices and market data for any stock!</p>
+        <p>My List Market Data</p>
         <form method="post">
-            <label for="stock">Enter Symbol:</label>
-            <input type="text" name="stock">
-            <button type="submit"> Add to List</button>
+            <label for="stocks">My List:</label>
             <br />
         </form>
-            <a href="/my-list"></a>
     </body>
 </html>
