Stonk Table tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,17 +19,18 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/my-list">My List</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="/stock_table">Stock Table</a>
                 </li>
             </ul>
         </div>
     </nav>
-        <p>Stock Market Notebook: Find up to date prices and market data for any stock!</p>
+        <p>Stock Market Notebook: Find up-to-date prices and market data for any stock!</p>
         <form method="post">
             <label for="stock">Enter Symbol:</label>
             <input type="text" name="stock">
             <button type="submit"> Add to List</button>
             <br />
         </form>
-            <a href="/my-list"></a>
     </body>
 </html>
