--- a/templates/my-list.html
+++ b/templates/my-list.html
@@ -19,7 +19,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/my-list">My List</a>
-                </li>
+                </li> 
             </ul>
         </div>
     </nav>
@@ -29,4 +29,5 @@
             <br />
         </form>
     </body>
+    <object type="text/html" data="stonk_table.html"></object>
 </html>
