Finished last_request_index

--- a/templates/my-list.html
+++ b/templates/my-list.html
@@ -27,6 +27,7 @@
         <form method="post">
             <label for="stocks">My List:</label>
             <br />
+            <a href="http://127.0.0.1:5000/stock_table" class="button">{{stocks[last_index]}}</a>
         </form>
     </body>
     <object type="text/html" data="stonk_table.html"></object>
