--- a/templates/my-list.html
+++ b/templates/my-list.html
@@ -27,7 +27,17 @@
         <form method="post">
             <label for="stocks">My List:</label>
             <br />
-            <a href="http://127.0.0.1:5000/stock_table" class="button">{{stocks[last_index]}}</a>
+            <button type = 'submit'> {{request_list[]}} </button>
+            <button type = 'submit'> {{display_stock}} </button>
+            <button type = 'submit'> {{display_stock}} </button>
+            <button type = 'submit'> {{display_stock}} </button>
+            <button type = 'submit'> {{display_stock}} </button>
+            <!-- <a href="http://127.0.0.1:5000/stock_table" class="button">{{stocks[0]}}</a> <br>
+            <a href="http://127.0.0.1:5000/stock_table" class="button">{{stocks[1]}}</a> <br>
+            <a href="http://127.0.0.1:5000/stock_table" class="button">{{stocks[2]}}</a> <br>
+            <a href="http://127.0.0.1:5000/stock_table" class="button">{{stocks[3]}}</a> <br>
+            <a href="http://127.0.0.1:5000/stock_table" class="button">{{stocks[4]}}</a> <br>
+            <a href="http://127.0.0.1:5000/stock_table" class="button">{{stocks[5]}}</a> <br> -->
         </form>
     </body>
     <object type="text/html" data="stonk_table.html"></object>
