--- a/templates/my-list.html
+++ b/templates/my-list.html
@@ -27,11 +27,11 @@
         <form method="post">
             <label for="stocks">My List:</label>
             <br />
-            <button type = 'submit'> {{request_list[0][0]}} </button> <br><br><br>
-            <button type = 'submit'> {{request_list[1][0]}} </button> <br><br><br>
-            <button type = 'submit'> {{request_list[2][0]}} </button> <br><br><br>
-            <button type = 'submit'> {{request_list[3][0]}} </button> <br><br><br>
-            <button type = 'submit'> {{request_list[4][0]}} </button>
+            <a href="http://127.0.0.1:5000/my-list/stock_1" class="button">{{request_list[0][0]}}</a> <br><br><br>
+            <a href="http://127.0.0.1:5000/my-list/stock_2" class="button">{{request_list[1][0]}}</a> <br><br><br>
+            <a href="http://127.0.0.1:5000/my-list/stock_3" class="button">{{request_list[2][0]}}</a> <br><br><br>
+            <a href="http://127.0.0.1:5000/my-list/stock_4" class="button">{{request_list[3][0]}}</a> <br><br><br>
+            <a href="http://127.0.0.1:5000/my-list/stock_5" class="button">{{request_list[4][0]}}</a> <br><br><br>
             <!-- <a href="http://127.0.0.1:5000/stock_table" class="button">{{stocks[0]}}</a> <br>
             <a href="http://127.0.0.1:5000/stock_table" class="button">{{stocks[1]}}</a> <br>
             <a href="http://127.0.0.1:5000/stock_table" class="button">{{stocks[2]}}</a> <br>
