--- a/templates/my-list.html
+++ b/templates/my-list.html
@@ -5,6 +5,11 @@
         <link rel="stylesheet" href="/static/bootstrap.min.css">
         <link rel='stylesheet' href='/static/styles.css' />
         <title>My List</title>
+        <style>
+            form {text-align: center;}
+            h1 {text-align: center;}
+            p {text-align: center;}
+        </style>
     </head>
     <body>
                 <!-- navigation bar -->
@@ -19,13 +24,21 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/my-list">My List</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/stock_table">Stock Table</a>
                 </li> 
             </ul>
         </div>
     </nav>
-        <p>My List Market Data</p>
+    <br>
+    <h1>
+        My List
+    </h1>
+    <br>
+    <p>Going back to the Home page clears your list of stocks.</p>
         <form method="post">
-            <label for="stocks">My List:</label>
+            <!-- <label for="stocks">My List:</label> -->
             <br />
             <a href="http://127.0.0.1:5000/my-list/stock_1" class="button">{{request_list[0][0]}}</a> <br><br><br>
             <a href="http://127.0.0.1:5000/my-list/stock_2" class="button">{{request_list[1][0]}}</a> <br><br><br>
