--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,9 @@
     </nav>
     <h1>Stock Market Notebook</h1> <br>
         <h3>Find up-to-date prices and market data for any stock!</h3> <br> 
-        <p>Enter up to five stock symbols (all-caps) one at a time. Click the "Clear List" button to clear your list. <br>
+        <p>Enter up to five stock symbols (all-caps) one at a time (you must enter a stock symbol before viewing your list). Click the "Clear List" button to clear your list. <br>
         Click the "See Table" button or "Stock Table" tab to see the table for the last stock you entered. <br>
-        After you see the table of a stock, use the back button of your browser to return to your list or the home page.</p><br>
+        After you see the table of a stock, use the back button of your browser to return to your list or the home page. </p><br>
         <form method="post">
             <label for="stock">Enter Symbol:</label>
             <input type="text" name="stock">
